# tendrosettings

./: .gitignore  LICENSE  PKGBUILD  README.md  install.sh  pyproject.toml
ajustes/: __main__.py  app.py  config.py
ajustes/core/: animations.py  app_colors.py  appearance.py  apply_animations.py  apply_app_colors.py  apply_appearance.py  apply_autostart.py  apply_grub.py  apply_grub_settings.py  apply_keybindings.py  apply_monitors.py  apply_wallpaper.py  apply_workspaces.py  autostart.py  config_store.py  dualboot.py  dualboot_bridge.py  errors.py  gallery.py  gpg.py  gpg_bridge.py  grub.py  grub_bridge.py  hyprland_bridge.py  monitors.py  (+12 more)
data/: dev.tendro.TendroSettings.desktop
scripts/: wallpaper-swww.sh
tests/: test_animations.py  test_app_colors.py  test_appearance.py  test_apply_animations.py  test_apply_app_colors.py  test_apply_appearance.py  test_apply_autostart.py  test_apply_grub.py  test_apply_grub_settings.py  test_apply_keybindings.py  test_apply_wallpaper.py  test_apply_workspaces.py  test_autostart.py  test_config.py  test_config_store.py  test_dualboot.py  test_dualboot_bridge.py  test_gallery.py  test_gpg.py  test_gpg_bridge.py  test_grub.py  test_grub_bridge.py  test_hyprland_bridge.py  test_keybindings.py  test_lua_animations.py  test_lua_appearance.py  test_lua_autostart.py  test_lua_keybindings.py  test_lua_loader.py  test_lua_monitors.py  test_lua_wallpaper.py  test_lua_workspaces.py  test_monitors.py  test_search.py  test_snapshot_bridge.py  test_snapshots.py  test_ssh_bridge.py  test_ssh_keys.py  test_theming_bridge.py  test_tls_bridge.py  (+3 more)
(+31 files in other folders)
