[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tendrosettings"
version = "0.1.0"
description = "TendroSettings — centro de ajustes del sistema para Hyprland/CachyOS"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "tendro" }]
# Dependencias de runtime = librerías del sistema (PyGObject/GTK4/libadwaita/
# libsecret) y herramientas CLI; no se instalan vía pip. Ver README / PKGBUILD.

[project.scripts]
tendrosettings = "ajustes.app:main"

[tool.setuptools.packages.find]
include = ["ajustes*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
